--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio id="bgMusic" loop>
-        <source src="file:///C:/Users/User/Downloads/Tulus%20-%20Tergila-Gila%20(Lyrics).mp4" type="video/mp4">
+        <source src="https://drive.google.com/file/d/1OcyQT2quEoLj3KwDPh5kMbMnAYgZx6X6/view?usp=sharing" type="video/mp4">
     </audio>
     <div class="container">
         <h1 class="title">Di hari raya ini mau ga maafin aku?</h1>
